[package]
name = "gd32vf103-demo"
version = "0.1.0"
authors = ["Martin Disch <martindisch@gmail.com>"]
edition = "2018"

[dependencies]
panic-halt = "0.2.0"
riscv = "0.7.0"
riscv-rt = "0.8.0"
embedded-hal = "1.0.0-alpha.6"
gd32vf103-hal = { git = "https://github.com/pineapplehunter/gd32vf103-hal", rev = "4362794336e24b0b35177da86fc3c9af85e1763b" }

# this lets you use `cargo fix`!
[[bin]]
name = "gd32vf103-demo"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
